# smartcity-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  yaizu_mcp_sequence.md
mcp/: __init__.py  scraper.py  server.py
scripts/: __init__.py  download_all_api_pdfs.py  download_catalog_pdfs.py  download_disaster_pdfs.py  enhanced_api_specs_generator.py  extract_pdf_models.py  openapi_pdf_processor.py  pdf_to_json_generator.py  scrape_disaster_apis.py
tests/: __init__.py  test_api_connection.py  test_api_tool.py  test_catalog_login.py  test_direct_login.py  test_mcp_integration.py  test_mcp_scrape.py  test_server.py
